--- a/ObjectDetection/app/src/main/res/layout/activity_main.xml
+++ b/ObjectDetection/app/src/main/res/layout/activity_main.xml
@@ -87,4 +87,11 @@
         app:layout_constraintStart_toEndOf="@+id/selectButton"
         app:layout_constraintTop_toTopOf="@+id/selectButton" />
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteY="96dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
